--- a/todo-list/src/index.css
+++ b/todo-list/src/index.css
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.todo {
+  cursor: pointer;
+}
+
+.strike {
+  text-decoration: line-through;
+}
+
+.App {
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
+}
